# prusa_mk4s_module

./: .env.example  .gitignore  AGENTS.md  CLUADE.md  LICENSE.txt  README.md  compose.yaml  pyproject.toml  settings.yaml
.github/workflows/: pre-commit.yml
configs/: RPL_Printer_Config.ini
scripts/: delete_all_runs.py
src/: Prusa_Automation (2).py  Prusa_Automation.py  STL_To_PRUSAPRINT.py  UpdateOnshape_to_STL.py  camera_driver.py  camera_rest_node.py  gcode_to_printing.py  prusa_driver.py  prusa_rest_node.py
tests/: test_base.py
tests/workcell_defs/: test_workcell.yaml
tests/workflow_defs/: autonomous_drop_workflow.yaml  test_workflow.yaml
