[project]
name = "prusa_mk4s_module"
version = "0.1.0"
description = "MADSci-powered Node Module for integrating a Prusa MK4S and Optical Sensor."
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "opencv-python",
    "madsci.node_module~=0.8",
    "madsci.client~=0.8",
    "madsci.common~=0.8",
]
